UI - Problem when submenu overlapping the menu bar #43247

Closed
opened 2015-01-14 14:04:18 +01:00 by martin me · 8 comments

System Information
Win7 64bit
AMD HD6850

Blender Version
2.73

Currently I experienced a "focus" problem when an opened menu was overlapping the menu bar. I was not able to navigate to a submenu item because the menu bar below was still active and apparently of the same or higher priority as the submenu. Whenever I tried to navigate to one of the submenu items and hovering over one of the main menu bar items below, the submenu closes. However, it seems there is no, or no proper, priority system controlling the behaviour of the overlapping menus and submenus.


To recreate this, for example, go to Game Logic UI preset and slide the horizontal subdivision of the window arrangement somewhat over the middle of the screen, so that the lower menu bars of the upper windows are above the horizontal middle line of the screen.
Navigate to the Text Editor Window and to the menu bar item Templates > Python > . The appaering largish 2nd submenu folds out to the left and downwards so that it is overlapping the main menu bar. If not try to modify the Window arrangemetent until it does.
If you try to navigate to one of the submenu items you may see - it's not working properly.

Greetings Martin


**System Information** Win7 64bit AMD HD6850 **Blender Version** 2.73 Currently I experienced a "focus" problem when an opened menu was overlapping the menu bar. I was not able to navigate to a submenu item because the menu bar below was still active and apparently of the same or higher priority as the submenu. Whenever I tried to navigate to one of the submenu items and hovering over one of the main menu bar items below, the submenu closes. However, it seems there is no, or no proper, priority system controlling the behaviour of the overlapping menus and submenus. ``` ``` To recreate this, for example, go to Game Logic UI preset and slide the horizontal subdivision of the window arrangement somewhat over the middle of the screen, so that the lower menu bars of the upper windows are above the horizontal middle line of the screen. Navigate to the Text Editor Window and to the menu bar item Templates > Python > . The appaering largish 2nd submenu folds out to the left and downwards so that it is overlapping the main menu bar. If not try to modify the Window arrangemetent until it does. If you try to navigate to one of the submenu items you may see - it's not working properly. Greetings Martin ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @martinme

Added subscriber: @martinme
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Julian Eisel self-assigned this 2015-01-14 20:05:20 +01:00
Member

Will have a look soon

Will have a look soon
Twenty319 commented 2015-01-15 05:50:24 +01:00 (Migrated from localhost:3001)

Added subscriber: @Twenty319

Added subscriber: @Twenty319

This issue was referenced by 17422124ec

This issue was referenced by 17422124eca332ac81628a197dc49f11616687ea
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 17422124ec.

Closed by commit 17422124ec.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43247
No description provided.