source/blender/editors/screen/area.c
@@ -2161,4 +2161,3 @@ void ED_region_cache_draw_cached_segments(const ARegion *ar, const int num_segme
 		}
 	}
 }
-
